--- a/htmldoc/ClassIndex.html
+++ b/htmldoc/ClassIndex.html
@@ -4,7 +4,7 @@
 <!--                                             -->
 <!-- Author: ROOT team (rootdev@cern.ch)         -->
 <!--                                             -->
-<!--   Date: Thu Sep 11 17:22:11 2014            -->
+<!--   Date: Mon Sep 15 12:37:59 2014            -->
 <!--                                             -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
@@ -45,72 +45,76 @@ return false;}
 </div><br />
 <div id="indxShortX"><h4>Jump to</h4>
 <a href="#idx0">T</a>
-<a href="#idx1">TC</a>
-<a href="#idx2">TCSMD</a>
-<a href="#idx3">TCSMH</a>
-<a href="#idx4">TCh</a>
-<a href="#idx5">TCr</a>
-<a href="#idx6">TD</a>
-<a href="#idx7">TF</a>
-<a href="#idx8">TFragmentQ</a>
-<a href="#idx9">TFragmentS</a>
-<a href="#idx10">TG</a>
-<a href="#idx11">TGRSIDetectorD</a>
-<a href="#idx12">TGRSIDetectorH</a>
-<a href="#idx13">TGRSIR</a>
-<a href="#idx14">TGRSIS</a>
-<a href="#idx15">TGri</a>
-<a href="#idx16">TGriffinD</a>
-<a href="#idx17">TGriffinH</a>
-<a href="#idx18">TK</a>
-<a href="#idx19">TM</a>
-<a href="#idx20">TMidasF</a>
-<a href="#idx21">TN</a>
-<a href="#idx22">TS</a>
-<a href="#idx23">TSharcD</a>
-<a href="#idx24">TSharcH</a>
-<a href="#idx25">TT</a>
-<a href="#idx26">TTigressD</a>
-<a href="#idx27">TTigressH</a>
-<a href="#idx28">TX</a>
+<a href="#idx1">TBe</a>
+<a href="#idx2">TC</a>
+<a href="#idx3">TCSMD</a>
+<a href="#idx4">TCSMH</a>
+<a href="#idx5">TCh</a>
+<a href="#idx6">TCr</a>
+<a href="#idx7">TD</a>
+<a href="#idx8">TF</a>
+<a href="#idx9">TFragmentQ</a>
+<a href="#idx10">TFragmentS</a>
+<a href="#idx11">TG</a>
+<a href="#idx12">TGRSIDetectorD</a>
+<a href="#idx13">TGRSIDetectorH</a>
+<a href="#idx14">TGRSIF</a>
+<a href="#idx15">TGRSIR</a>
+<a href="#idx16">TGRSIS</a>
+<a href="#idx17">TGri</a>
+<a href="#idx18">TGriffinD</a>
+<a href="#idx19">TGriffinH</a>
+<a href="#idx20">TK</a>
+<a href="#idx21">TM</a>
+<a href="#idx22">TMidasF</a>
+<a href="#idx23">TN</a>
+<a href="#idx24">TS</a>
+<a href="#idx25">TSharcD</a>
+<a href="#idx26">TSharcH</a>
+<a href="#idx27">TT</a>
+<a href="#idx28">TTigressD</a>
+<a href="#idx29">TTigressH</a>
+<a href="#idx30">TX</a>
 </div><br />
 <ul id="indx">
 <li class="idxl0"><a name="idx0"></a><a href="./TBGOData.html"><span class="typename">TBGOData</span></a> !  // TBgoData structure</li>
-<li class="idxl1"><a name="idx1"></a><a href="./TCSM.html"><span class="typename">TCSM</span></a> CSM Analysis structure</li>
-<li class="idxl0"><a name="idx2"></a><a href="./TCSMData.html"><span class="typename">TCSMData</span></a> !  // CSMData structure </li>
-<li class="idxl1"><a name="idx3"></a><a href="./TCSMHit.html"><span class="typename">TCSMHit</span></a> </li>
-<li class="idxl0"><a name="idx4"></a><a href="./TChannel.html"><span class="typename">TChannel</span></a> Contains the Digitizer Information</li>
-<li class="idxl1"><a name="idx5"></a><a href="./TCrystalHit.html"><span class="typename">TCrystalHit</span></a> </li>
-<li class="idxl0"><a name="idx6"></a><a href="./TDataParser.html"><span class="typename">TDataParser</span></a> Parses the MIDAS files into DAQ-dependent TFragments. </li>
-<li class="idxl1"><a name="idx7"></a><a href="./TFragment.html"><span class="typename">TFragment</span></a> Event Fragments</li>
-<li class="idxl0"><a name="idx8"></a><a href="./TFragmentQueue.html"><span class="typename">TFragmentQueue</span></a> </li>
-<li class="idxl1"><a name="idx9"></a><a href="./TFragmentSelector.html"><span class="typename">TFragmentSelector</span></a> Filters TFragments and creates User Defined histograms</li>
-<li class="idxl0"><a name="idx10"></a><a href="./TGRSIDetector.html"><span class="typename">TGRSIDetector</span></a> </li>
-<li class="idxl1"><a name="idx11"></a><a href="./TGRSIDetectorData.html"><span class="typename">TGRSIDetectorData</span></a> !  // SharcData structure </li>
-<li class="idxl0"><a name="idx12"></a><a href="./TGRSIDetectorHit.html"><span class="typename">TGRSIDetectorHit</span></a> </li>
-<li class="idxl1"><a name="idx13"></a><a href="./TGRSIRunInfo.html"><span class="typename">TGRSIRunInfo</span></a> </li>
-<li class="idxl0"><a name="idx14"></a><a href="./TGRSIStats.html"><span class="typename">TGRSIStats</span></a> </li>
-<li class="idxl1"><a name="idx15"></a><a href="./TGriffin.html"><span class="typename">TGriffin</span></a> Griffin Physics structure</li>
-<li class="idxl0"><a name="idx16"></a><a href="./TGriffinData.html"><span class="typename">TGriffinData</span></a> ! // TGriffinData structure</li>
-<li class="idxl1"><a name="idx17"></a><a href="./TGriffinHit.html"><span class="typename">TGriffinHit</span></a> </li>
-<li class="idxl0"><a name="idx18"></a><a href="./TKinematics.html"><span class="typename">TKinematics</span></a> </li>
-<li class="idxl1"><a name="idx19"></a><a href="./TMidasEvent.html"><span class="typename">TMidasEvent</span></a> </li>
-<li class="idxl0"><a name="idx20"></a><a href="./TMidasFile.html"><span class="typename">TMidasFile</span></a> </li>
-<li class="idxl1"><a name="idx21"></a><a href="./TNucleus.html"><span class="typename">TNucleus</span></a> </li>
-<li class="idxl0"><a name="idx22"></a><a href="./TSharc.html"><span class="typename">TSharc</span></a> </li>
-<li class="idxl1"><a name="idx23"></a><a href="./TSharcData.html"><span class="typename">TSharcData</span></a> !  // SharcData structure </li>
-<li class="idxl0"><a name="idx24"></a><a href="./TSharcHit.html"><span class="typename">TSharcHit</span></a> </li>
-<li class="idxl1"><a name="idx25"></a><a href="./TTigress.html"><span class="typename">TTigress</span></a> Tigress Physics structure</li>
-<li class="idxl0"><a name="idx26"></a><a href="./TTigressData.html"><span class="typename">TTigressData</span></a> ! // TCloverData structure</li>
-<li class="idxl1"><a name="idx27"></a><a href="./TTigressHit.html"><span class="typename">TTigressHit</span></a> </li>
-<li class="idxl0"><a name="idx28"></a><a href="./TXMLOdb.html"><span class="typename">TXMLOdb</span></a> </li>
+<li class="idxl1"><a name="idx1"></a><a href="./TBetaDecay.html"><span class="typename">TBetaDecay</span></a> </li>
+<li class="idxl0"><a name="idx2"></a><a href="./TCSM.html"><span class="typename">TCSM</span></a> CSM Analysis structure</li>
+<li class="idxl1"><a name="idx3"></a><a href="./TCSMData.html"><span class="typename">TCSMData</span></a> !  // CSMData structure </li>
+<li class="idxl0"><a name="idx4"></a><a href="./TCSMHit.html"><span class="typename">TCSMHit</span></a> </li>
+<li class="idxl1"><a name="idx5"></a><a href="./TChannel.html"><span class="typename">TChannel</span></a> Contains the Digitizer Information</li>
+<li class="idxl0"><a name="idx6"></a><a href="./TCrystalHit.html"><span class="typename">TCrystalHit</span></a> </li>
+<li class="idxl1"><a name="idx7"></a><a href="./TDataParser.html"><span class="typename">TDataParser</span></a> Parses the MIDAS files into DAQ-dependent TFragments. </li>
+<li class="idxl0"><a name="idx8"></a><a href="./TFragment.html"><span class="typename">TFragment</span></a> Event Fragments</li>
+<li class="idxl1"><a name="idx9"></a><a href="./TFragmentQueue.html"><span class="typename">TFragmentQueue</span></a> </li>
+<li class="idxl0"><a name="idx10"></a><a href="./TFragmentSelector.html"><span class="typename">TFragmentSelector</span></a> Filters TFragments and creates User Defined histograms</li>
+<li class="idxl1"><a name="idx11"></a><a href="./TGRSIDetector.html"><span class="typename">TGRSIDetector</span></a> </li>
+<li class="idxl0"><a name="idx12"></a><a href="./TGRSIDetectorData.html"><span class="typename">TGRSIDetectorData</span></a> !  // SharcData structure </li>
+<li class="idxl1"><a name="idx13"></a><a href="./TGRSIDetectorHit.html"><span class="typename">TGRSIDetectorHit</span></a> </li>
+<li class="idxl0"><a name="idx14"></a><a href="./TGRSIFunctions.html"><span class="typename">TGRSIFunctions</span></a> </li>
+<li class="idxl1"><a name="idx15"></a><a href="./TGRSIRunInfo.html"><span class="typename">TGRSIRunInfo</span></a> </li>
+<li class="idxl0"><a name="idx16"></a><a href="./TGRSIStats.html"><span class="typename">TGRSIStats</span></a> </li>
+<li class="idxl1"><a name="idx17"></a><a href="./TGriffin.html"><span class="typename">TGriffin</span></a> Griffin Physics structure</li>
+<li class="idxl0"><a name="idx18"></a><a href="./TGriffinData.html"><span class="typename">TGriffinData</span></a> ! // TGriffinData structure</li>
+<li class="idxl1"><a name="idx19"></a><a href="./TGriffinHit.html"><span class="typename">TGriffinHit</span></a> </li>
+<li class="idxl0"><a name="idx20"></a><a href="./TKinematics.html"><span class="typename">TKinematics</span></a> </li>
+<li class="idxl1"><a name="idx21"></a><a href="./TMidasEvent.html"><span class="typename">TMidasEvent</span></a> </li>
+<li class="idxl0"><a name="idx22"></a><a href="./TMidasFile.html"><span class="typename">TMidasFile</span></a> </li>
+<li class="idxl1"><a name="idx23"></a><a href="./TNucleus.html"><span class="typename">TNucleus</span></a> </li>
+<li class="idxl0"><a name="idx24"></a><a href="./TSharc.html"><span class="typename">TSharc</span></a> </li>
+<li class="idxl1"><a name="idx25"></a><a href="./TSharcData.html"><span class="typename">TSharcData</span></a> !  // SharcData structure </li>
+<li class="idxl0"><a name="idx26"></a><a href="./TSharcHit.html"><span class="typename">TSharcHit</span></a> </li>
+<li class="idxl1"><a name="idx27"></a><a href="./TTigress.html"><span class="typename">TTigress</span></a> Tigress Physics structure</li>
+<li class="idxl0"><a name="idx28"></a><a href="./TTigressData.html"><span class="typename">TTigressData</span></a> ! // TCloverData structure</li>
+<li class="idxl1"><a name="idx29"></a><a href="./TTigressHit.html"><span class="typename">TTigressHit</span></a> </li>
+<li class="idxl0"><a name="idx30"></a><a href="./TXMLOdb.html"><span class="typename">TXMLOdb</span></a> </li>
 </ul>
 
 <br />
 <!--SIGNATURE-->
 <div id="footer">
 
-<em>&raquo; Last changed: 2014-09-11 17:22 </em><em>&raquo; Last generated: 2014-09-11 17:22</em><br />
+<em>&raquo; Last changed: 2014-09-15 12:37 </em><em>&raquo; Last generated: 2014-09-15 12:37</em><br />
 <em>This page has been automatically generated. For comments or suggestions regarding the documentation or ROOT in general please send a mail to <a href="mailto:rootdev@cern.ch">ROOT support</a>.</em>
 </div>
 </div>
