--- a/htmldoc/TGriffinHit.html
+++ b/htmldoc/TGriffinHit.html
@@ -4,7 +4,7 @@
 <!--                                             -->
 <!-- Author: ROOT team (rootdev@cern.ch)         -->
 <!--                                             -->
-<!--   Date: Thu Sep 11 17:22:14 2014            -->
+<!--   Date: Mon Sep 15 12:38:03 2014            -->
 <!--                                             -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
@@ -250,7 +250,7 @@ return false;}
 <div style="clear:both;"></div>
 </div>
 <div class="funcdoc"><span class="funcname"><span class="keyword">bool</span> <a class="funcname" name="TGriffinHit:InFilter" href="src/TGriffinHit.cxx.html#jRWwKE">InFilter</a>(<a href="./ListOfTypes.html#Int_t">Int_t</a> )</span><br />
-<div class="funccomm"><pre> check if wanted <a href="./TGriffinHit.html#TGriffinHit:filter" title="Int_t TGriffinHit::filter">filter</a> is in the desired <a href="./TGriffinHit.html#TGriffinHit:filter" title="Int_t TGriffinHit::filter">filter</a>;
+<div class="funccomm"><pre> check if the desired <a href="./TGriffinHit.html#TGriffinHit:filter" title="Int_t TGriffinHit::filter">filter</a> is in wanted <a href="./TGriffinHit.html#TGriffinHit:filter" title="Int_t TGriffinHit::filter">filter</a>;
  return the answer;
 </pre></div>
 </div>
@@ -370,7 +370,7 @@ return false;}
 <!--SIGNATURE-->
 <div id="footer">
 
-<em>&raquo; Last changed: Thu Sep 11 17:22:14 2014 </em><em>&raquo; Last generated: 2014-09-11 17:22</em><br />
+<em>&raquo; Last changed: Mon Sep 15 12:38:03 2014 </em><em>&raquo; Last generated: 2014-09-15 12:38</em><br />
 <em>This page has been automatically generated. For comments or suggestions regarding the documentation or ROOT in general please send a mail to <a href="mailto:rootdev@cern.ch">ROOT support</a>.</em>
 </div>
 </div>
