--- a/htmldoc/src/TGRSIDetector.h.html
+++ b/htmldoc/src/TGRSIDetector.h.html
@@ -4,7 +4,7 @@
 <!--                                             -->
 <!-- Author: ROOT team (rootdev@cern.ch)         -->
 <!--                                             -->
-<!--   Date: Thu Sep 11 17:22:13 2014            -->
+<!--   Date: Mon Sep 15 12:38:02 2014            -->
 <!--                                             -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
@@ -31,9 +31,9 @@
 
 <span class="cpp">#include "TObject.h"</span>
 
-<span class="cpp">#include &lt;<a href="../TGRSIDetectorData.h">TGRSIDetectorData.h</a>&gt;</span>
-<span class="cpp">#include &lt;<a href="../TFragment.h">TFragment.h</a>&gt;</span>
-<span class="cpp">#include &lt;<a href="../TChannel.h">TChannel.h</a>&gt;</span>
+<span class="cpp">#include "<a href="../TGRSIDetectorData.h">TGRSIDetectorData.h</a>"</span>
+<span class="cpp">#include "<a href="../TFragment.h">TFragment.h</a>"</span>
+<span class="cpp">#include "<a href="../TChannel.h">TChannel.h</a>"</span>
 
 
 
@@ -68,7 +68,7 @@
 <!--SIGNATURE-->
 <div id="footer">
 
-<em>&raquo; Last changed: 2014-09-11 17:22 </em><em>&raquo; Last generated: 2014-09-11 17:22</em><br />
+<em>&raquo; Last changed: 2014-09-15 12:38 </em><em>&raquo; Last generated: 2014-09-15 12:38</em><br />
 <em>This page has been automatically generated. For comments or suggestions regarding the documentation or ROOT in general please send a mail to <a href="mailto:rootdev@cern.ch">ROOT support</a>.</em>
 </div>
 </div>
